# ChangeLog for app-emulation/xen-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.231 2014/03/23 02:37:26 dlan Exp $

*xen-tools-4.4.0 (23 Mar 2014)

  23 Mar 2014; Yixun Lan <dlan@gentoo.org> +xen-tools-4.4.0.ebuild,
  +files/xen-tools-4.4-api-fix.patch, +files/xen-4.4-nostrip.patch,
  +files/xen-4.4-qemu-bridge.patch, files/xenstored.initd:
  bump to 4.4.0

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> xen-tools-4.2.3-r1.ebuild,
  xen-tools-4.2.4.ebuild, xen-tools-4.3.1-r5.ebuild, xen-tools-4.3.1-r6.ebuild,
  xen-tools-4.3.2.ebuild:
  Update libgcrypt dep to use slot :0.

  23 Feb 2014; Yixun Lan <dlan@gentoo.org> files/xenstored.initd:
  fix bug #502056, thanks KK <klaus.kreil at univie.ac.at>

  21 Feb 2014; Ian Delaney <idella4@gentoo.org> xen-tools-4.2.3-r1.ebuild,
  xen-tools-4.2.4.ebuild, xen-tools-4.3.2.ebuild:
  correct typos, tidy

  20 Feb 2014; Yixun Lan <dlan@gentoo.org>
  -files/xen-4-CVE-2013-0215-XSA-38.patch,
  -files/xen-4-CVE-2013-1919-XSA-46.patch,
  -files/xen-4-CVE-2013-1922-XSA-48.patch,
  -files/xen-4-CVE-2013-1952-XSA-49.patch,
  -files/xen-4-CVE-2013-1952-XSA_49.patch,
  -files/xen-4-CVE-2013-2072-XSA-56.patch,
  -files/xen-4.2-CVE-2013-1-XSA-55.patch,
  -files/xen-4.2-CVE-2013-12to13-XSA-55.patch,
  -files/xen-4.2-CVE-2013-14-XSA-55.patch,
  -files/xen-4.2-CVE-2013-16-XSA-55.patch,
  -files/xen-4.2-CVE-2013-17-XSA-55.patch,
  -files/xen-4.2-CVE-2013-18to19-XSA-55.patch,
  -files/xen-4.2-CVE-2013-2-XSA-55.patch,
  -files/xen-4.2-CVE-2013-20to23-XSA-55.patch,
  -files/xen-4.2-CVE-2013-3-XSA-55.patch,
  -files/xen-4.2-CVE-2013-4-XSA-55.patch,
  -files/xen-4.2-CVE-2013-5to7-XSA-55.patch,
  -files/xen-4.2-CVE-2013-6-XSA-55.patch,
  -files/xen-4.2-CVE-2013-7-XSA-55.patch,
  -files/xen-4.2-CVE-2013-9to10-XSA-55.patch, -files/xen-4.2-CVE-XSA-57.patch,
  -files/xen-tools-4-CVE-2013-4369-XSA-68.patch,