@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX fix-gold-ld.patch 408 SHA256 9ed4a989562890a87c05f6a63c2c2a81528e79f9e2fe5b7ebaafbc4ba874007c SHA512 7456bd9055a84490c5ac156a39ae9cda02dbe38712db5beb7adf572870f619cd897c70d4c24491dbfa3334df7ca56fd0af7494ce070f99f7d6275b9f32e48563 WHIRLPOOL f78caad306e7305bd3bc04a8c6acfda9a7a77cc405bfa74f824138b3bca85e61e8a948e112546c217aa56fe12b2b7f8dff948060bd7e61b9ac28adeca72a2a85
 AUX ipxe-nopie.patch 964 SHA256 0b70407969735f36587fade77f524c1c2077f28585b9e0df4fe347ecc5e379bf SHA512 510f0d88cf08a9a963c0ccf32e795e98f89e749f746ea244b29d7af770608287d8218b215ee46d73ec4f727d6dfbdb316048c6b42df55a8e154aa952abb50c1d WHIRLPOOL 38ed76955d51e9c4603a487e34340df7392e3011e5b2ed550bd945727733cc3f02691c6e0a58ecbe0dd56377a5b6a955a1516647c49cb85dfc809c852ede9e38
 AUX qemu-bridge.patch 3808 SHA256 73155306c318b7a9304eb5b7798f1d2aaf009f45af4d4dcbbc3beeb7ced013b6 SHA512 be35481ea6f9e87a6b1b73bae4c10137379447d9fecf268073015ac10a3091b8f6b0088d494bff18fcb5df27e3417441a63c63bfa3b87dacd62e5a4d31f34cfd WHIRLPOOL e363cb8e666b83b1023e954fd40c4e6d980c6b391a9159cd60d1b4bf775f8376e198e53c3c59a25a820c2f0de9fa94b2245f31d7a77f224362754865a22fe2d2
@@ -54,6 +57,13 @@ EBUILD xen-tools-4.2.4.ebuild 11987 SHA256 ba8f8215a30ad9c8142afe162daa9ccf622a1
 EBUILD xen-tools-4.3.1-r5.ebuild 13361 SHA256 a8ce8d82a364d052e4cff8e0488a3a4270195454f36c3147bad7eac85d1fd759 SHA512 5627f29c7ec9710db00c828d4cf3d919f75368f82ca21c8398c04d6ca98e92541b07b5a3491ee289f652b5d532249e98cd85820a4f56a7fcfa9c78b9eb42712e WHIRLPOOL 3850ebf7e61ff79b79eb0f00707b7d9da289188a4f09a69d45eff3b0b680a6d3474773fd7ff280ff6a70d54c8cf6d9ff38bb3b195d491bc068d2f5584515eb7a
 EBUILD xen-tools-4.3.1-r6.ebuild 13005 SHA256 7e958545d22e0bba03adc8a00a8330f35f27dcb426bb6e0494a62a4dfe1510a3 SHA512 2aa89d5b14842c7acb77a0e81899b5a19cc40ca2a223936fd04f584c3ee147b56efceb59759162f1ff8197d482e36ee8434cbe8cb508e8d16ab38e725a8f6ff7 WHIRLPOOL 95969a9eda5f3a1b9e731baa23470bf39ecfca37788d7e88b109e4b9763435a5f875ab206e79de646a281db5833c492aee1e89ce39905d17ce2b6fb04a66e4dd
 EBUILD xen-tools-4.3.2.ebuild 13245 SHA256 34e4c318fe5d1a21020488f8f4c81c856451471d4ae86ca5d145c71e422ddff7 SHA512 fbe50cf92f137887c609dd201a3af0a0cb0b9e001b933bf54737e82962cdf971d6cf4964265d7ed3bd6d252b7e202a03e6596e00bfb393854b1ab0c15e1d1205 WHIRLPOOL 3d8d1facf4368adda3144277b07873eba9b79e0cf7eb11da1b990bb306a2bcdcb6ab4be038b59bdae1953dc1fd980e19fc0b389fab359f4fedce56fd25371394
-EBUILD xen-tools-4.4.0.ebuild 12861 SHA256 87cfe7616d76dccfdc33564465ef02ab7bae47eaa68bc63ee68012c535de855f SHA512 7798494c9f733e0c526f2729a33a919f84529c81d4cddb4dca445794435e1896a9d039a2c77f74a2c17e1048a6cf826a2c8e8b1062c37f307dea5832053a7ef4 WHIRLPOOL df78f2d0d5fa8e432c1e376d1fe3f5dd8e19dd3cf71a29713c3a816eab8bfe2f9e9fa1ca9a37225b772c6d67dff9f98570b68495db2e194857d827df25f4583e
-MISC ChangeLog 54874 SHA256 3241917473891086436af4003355f500bcf74b528252d4102aaba007dab57935 SHA512 2351c0da02e029013a0cba0acc74a9fe01a82b004d3956728b0eb1d35c64654f74ef50518600408ad16adce34333c56582d6942e0dffe70b17f39b06bffc6d05 WHIRLPOOL 68fe7295f07eca04f40024fc5bfc3008753860f27530b7674ddbc102ed4d4de773adf3f0e8e5a75b328238ecc4a3f6ac2f451fa9cd376e01c67cedc020e3656a
+EBUILD xen-tools-4.4.0.ebuild 12781 SHA256 e7ec21501a042a5956b7918b5af60f44fb3bbe61955e72ae5d0eecde1585b132 SHA512 acf698ca9c6838672051ae777a2efe1bd28e7a9ec75b5328a22cefb81175b7e4607d9ae8bd154f5e07cb776e8f575bc486ace5ade330a4ddc32d7206a4532b4f WHIRLPOOL 380d243bbb78c7528523287b83f8cd311031dedd01803a5bc0d566469b7f42f0a2ac03de91f8c70f7930f8588e13a1dfd2d5eb7854f2db4505f4a58a97cdb130
+MISC ChangeLog 55160 SHA256 363fac586b61c8cc9982604c2a35a89fb6fb9d42dfc0117b24b2b8db5a7fd44b SHA512 8dad11ac9a6ee7a40f3c665f224535b1253aade3785ff1abaed6b2260e96e7765a3415a2b92a5442fbbef8dff63d7202ae912799bee4b0ddfaa0247b40050ae3 WHIRLPOOL b4f98278a12e0e4562c30409d6487145a6ac351ce3bef735a4bd8cbad5b26a973663b47966d7d2c12609d76dc56faed29d1bc366eb56a05356ce99d31cf17423
 MISC metadata.xml 810 SHA256 adf8036cf95a218b6ac09df641acc482e39557e3cfd16728e03af04810c92e36 SHA512 8fd59fc4b8110132df068d3658b8d48b9f10c36243b2ca340c5b178a58eea12bc7531c14b6a41478a0aa754a2b29ec1bf32827d5fca240ad1237c017e50f1de9 WHIRLPOOL 01e873b0cebe4a40f702e0977efc2b3f62984032e3ff81d3e45b3e291712e51c20510f41dd1402bd4d916a674204b02acc49fc6e6be53cbb0f4fc8430cbb53d8
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlMvu+sACgkQso7CE7gHKw2CIACfeAXikiPz9IorIu8tZVZnNWJV
+7yAAoOBn6E5xb+x9Qe8L89Lo65IwuDeC
+=Pox+
+-----END PGP SIGNATURE-----
