@@ -1,15 +1,15 @@
 DEFINED_PHASES=compile configure install postinst prepare setup
-DEPEND=dev-libs/lzo:2 dev-libs/glib:2 dev-libs/yajl dev-libs/libaio dev-libs/libgcrypt sys-libs/zlib dev-python/lxml[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] pam? ( dev-python/pypam[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) hvm? ( media-libs/libsdl ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[xml,threads] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] api? ( dev-libs/libxml2 net-misc/curl ) pygrub? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[ncurses] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) arm? ( >=sys-apps/dtc-1.4.0 ) !arm? ( sys-devel/bin86 sys-firmware/ipxe sys-firmware/seabios sys-devel/dev86 sys-power/iasl ) dev-lang/perl app-misc/pax-utils dev-python/markdown doc? ( app-doc/doxygen dev-tex/latex2html[png,gif] media-gfx/graphviz dev-tex/xcolor media-gfx/transfig dev-texlive/texlive-latexextra virtual/latex-base dev-tex/latexmk dev-texlive/texlive-latex dev-texlive/texlive-pictures dev-texlive/texlive-latexrecommended ) hvm? ( x11-proto/xproto !net-libs/libiscsi ) qemu? ( x11-libs/pixman ) ocaml? ( dev-ml/findlib >=dev-lang/ocaml-4 ) virtual/pkgconfig
+DEPEND=dev-libs/lzo:2 dev-libs/glib:2 dev-libs/yajl dev-libs/libaio dev-libs/libgcrypt:0 sys-libs/zlib dev-python/lxml[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] pam? ( dev-python/pypam[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) hvm? ( media-libs/libsdl ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[xml,threads] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] api? ( dev-libs/libxml2 net-misc/curl ) pygrub? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[ncurses] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) arm? ( >=sys-apps/dtc-1.4.0 ) !arm? ( sys-devel/bin86 sys-firmware/ipxe sys-firmware/seabios sys-devel/dev86 sys-power/iasl ) dev-lang/perl app-misc/pax-utils dev-python/markdown doc? ( app-doc/doxygen dev-tex/latex2html[png,gif] media-gfx/graphviz dev-tex/xcolor media-gfx/transfig dev-texlive/texlive-latexextra virtual/latex-base dev-tex/latexmk dev-texlive/texlive-latex dev-texlive/texlive-pictures dev-texlive/texlive-latexrecommended ) hvm? ( x11-proto/xproto !net-libs/libiscsi ) qemu? ( x11-libs/pixman ) ocaml? ( dev-ml/findlib >=dev-lang/ocaml-4 ) virtual/pkgconfig
 DESCRIPTION=Xend daemon and tools
 EAPI=5
 HOMEPAGE=http://xen.org/
 IUSE=api custom-cflags debug doc flask hvm qemu ocaml +pam python pygrub screen static-libs python_targets_python2_7 python_single_target_python2_7
 KEYWORDS=~amd64 ~arm -x86
 LICENSE=GPL-2
-RDEPEND=dev-libs/lzo:2 dev-libs/glib:2 dev-libs/yajl dev-libs/libaio dev-libs/libgcrypt sys-libs/zlib sys-apps/iproute2 net-misc/bridge-utils screen? ( app-misc/screen app-admin/logrotate ) virtual/udev
+RDEPEND=dev-libs/lzo:2 dev-libs/glib:2 dev-libs/yajl dev-libs/libaio dev-libs/libgcrypt:0 sys-libs/zlib sys-apps/iproute2 net-misc/bridge-utils screen? ( app-misc/screen app-admin/logrotate ) virtual/udev
 REQUIRED_USE=hvm? ( qemu ) python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 ) pygrub? ( python )
 RESTRICT=test
 SLOT=0
 SRC_URI=http://bits.xensource.com/oss-xen/release/4.4.0/xen-4.4.0.tar.gz
 _eclasses_=bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	82a55861314bbcedaf1e08ed4dd651b3	python-utils-r1	18d8279a3382bf4453e7ff35208ce907	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	udev	a9a8d051efb42bfe884c1db82ce161de
-_md5_=21ee547e1b9f501ec47fc18569cec803
+_md5_=7e541e380d85d75584fbfaec21ea09ce
